# tcc_prog

./: Cargo.toml  README.md
src/: defs.rs  emfcq.rs  estimativa_mul_lagrange.rs  funcao_merito.rs  instancias.rs  iter_linear.rs  lagrangianas.rs  main.rs  matricial.rs  ponto_estacionario.rs  prob_linear.rs  regiao_de_confianca.rs  utils.rs
