[package]
name = "tcc_prog"
version = "0.1.0"
authors = ["Matheus Machado <matheusmachado708@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_lp = { version = "*", features = ["minilp"], default-features = false }